# ai-model-provenance-tracker

./: .gitignore  .provenance-data.json  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
model_prov/: __init__.py  certificate.py  cli.py  crypto.py  registry.py  schema.py
src/: cli.ts  compliance.ts  dashboard.ts  index.ts  lineage.ts  registry.ts  reporter.ts  storage.ts
tests/: lineage.test.ts  test_provenance.py
