[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-model-provenance-tracker"
version = "0.1.0"
description = "Track the full lineage of AI models from training data to deployment with verifiable provenance chains"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Phoenix Assistant" }]
keywords = ["ai", "provenance", "model-lineage", "trust", "safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "pyOpenSSL>=23.0",
    "cryptography>=41.0",
    "jinja2>=3.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
pdf = ["weasyprint>=60.0"]

[project.scripts]
model-prov = "model_prov.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["model_prov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
